[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MobAudioController.gd" type="Script" id=1]


[node name="MobAudioController" type="Node2D"]
pause_mode = 1
visible = false
script = ExtResource( 1 )

[node name="ActionAudioPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = "Animals"

[node name="BehaviorAudioPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = "Animals"

[node name="BehaviorTimer" type="Timer" parent="."]

[connection signal="timeout" from="BehaviorTimer" to="." method="_on_BehaviorTimer_timeout"]
